fixed navbar and realigned the header

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,5 @@
 nav {
   height: 120px;
-  width: auto;
   background-color: #4056A1;
   color: #FFFFFF;
   display: flex;
@@ -8,6 +7,9 @@ nav {
   align-items: center;
   padding-left: 1.5em;
   padding-right: 1.5em;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 nav span {
@@ -21,18 +23,19 @@ nav span {
 .navRight {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  margin-top: auto;
 }
 
 header {
-  height: 400px;
+  height: 20em;
   width: 100%;
+  padding-top: 150px;
   color: #FFFFFF;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: lightgray;
   background-image: url(../images/background-image.png);
 }
